--- a/package.json
+++ b/package.json
@@ -3,15 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "vue-cli-service serve --mode dev",
+    "build-dev": "vue-cli-service build --mode dev",
+    "build-prod": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "@vee-validate/i18n": "^4.5.2",
+    "@vee-validate/rules": "^4.5.2",
+    "axios": "^0.22.0",
+    "bootstrap": "^5.1.1",
     "core-js": "^3.6.5",
+    "jquery": "^3.6.3",
+    "moment": "^2.29.1",
+    "sweetalert2": "^11.1.9",
+    "vee-validate": "^4.5.2",
     "vue": "^3.0.0",
+    "vue-axios": "^3.3.7",
+    "vue-gtag-next": "^1.14.0",
+    "vue-meta": "^3.0.0-alpha.7",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vue-sweetalert2": "^5.0.2",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.13",
