--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.22.0",
     "bootstrap": "^5.1.1",
     "core-js": "^3.6.5",
+    "croppie": "^2.6.5",
     "jquery": "^3.6.3",
     "moment": "^2.29.1",
     "sweetalert2": "^11.1.9",
