--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.3.0",
     "@popperjs/core": "^2.11.6",
     "@vee-validate/i18n": "^4.5.2",
     "@vee-validate/rules": "^4.5.2",
@@ -16,6 +17,7 @@
     "bootstrap": "^5.1.1",
     "core-js": "^3.6.5",
     "croppie": "^2.6.5",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.3",
     "moment": "^2.29.1",
     "sweetalert2": "^11.1.9",
