--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,4 @@
-VUE_APP_BASE_API = https://61.219.193.150/CardApply/api
-VUE_APP_BASE = https://61.219.193.150
+VUE_APP_BASE_API = https://card-beta.uitc.com.tw/CardApply/api
+VUE_APP_BASE = https://card-beta.uitc.com.tw
+VUE_APP_DOMAIN = https://card-beta.uitc.com.tw
 NODE_ENV = development
