--- a/.env.prod
+++ b/.env.prod
@@ -1,1 +1,4 @@
+VUE_APP_BASE_API = https://card-beta.uitc.com.tw/CardApply/api
+VUE_APP_BASE = https://card-beta.uitc.com.tw
+VUE_APP_DOMAIN = https://card-beta.uitc.com.tw
 NODE_ENV = production
