1.新增 STATIC 環境變數 2.css改讀地端 3.html地端讀檔改為86

--- a/.env.prod
+++ b/.env.prod
@@ -1,4 +1,4 @@
 VUE_APP_BASE_API = https://card-beta.uitc.com.tw/CardApply/api
 VUE_APP_BASE = https://card-beta.uitc.com.tw
-VUE_APP_DOMAIN = https://card-beta.uitc.com.tw
+VUE_APP_STATIC = https://card-beta.uitc.com.tw/eCard_source
 NODE_ENV = production
