--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --mode dev",
-    "build-dev": "vue-cli-service build --mode dev",
+    "build-uat": "vue-cli-service build --mode uat",
     "build-prod": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint"
   },
