--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.1.1",
     "core-js": "^3.6.5",
     "croppie": "^2.6.5",
+    "dompurify": "^3.0.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.3",
     "moment": "^2.29.1",
