--- a/.env.prod
+++ b/.env.prod
@@ -1,4 +1,4 @@
-VUE_APP_BASE_API = https://card-beta.uitc.com.tw/CardApply/api
-VUE_APP_BASE = https://card-beta.uitc.com.tw
-VUE_APP_STATIC = https://card-beta.uitc.com.tw/eCard_source
+VUE_APP_BASE_API = https://card.ubot.com.tw/CardApply/api
+VUE_APP_BASE = https://card.ubot.com.tw
+VUE_APP_STATIC = https://card.ubot.com.tw/eCard_source
 NODE_ENV = production
